fix case where TR button overlap group image

--- a/app/assets/stylesheets/modules/navigation/_main_navbar.scss
+++ b/app/assets/stylesheets/modules/navigation/_main_navbar.scss
@@ -32,7 +32,7 @@
         // background: white !important;
       }
 
-      @include breakpoint(0 $screen-sm - 1) {
+      @include breakpoint(0 1024px) {
         padding: 2px;
         top: 5px;
         left: 5px;
